# celery-mock

./: .gitignore  .travis.yml  LICENSE  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
celery_mock/: __init__.py  celery_mock.py
tests/: example_app.py  test_celery_mock.py
