[tool.poetry]
name = "celery-mock"
version = "1.1.6"
description = "celery-mock allows you to mock celery task and run them when you want"
authors = ["Konrad Rotkiewicz <konrad@ulam.io>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/ulamlabs/celery-mock/"
keywords = [
    "celery", 
    "mock", 
    "celery_mock",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
include = [
    "tests/**/*"
]

[tool.poetry.dependencies]
python = ">=3.6"
celery = "^5.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^2.6.0"
pytest = "^3.0.7"
pytest-cov = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
