[metadata]
name = celery_mock
version = attr: celery_mock.__version__
author = attr: celery_mock.__author__
author_email = konrad@ulam.io
description = celery-mock allows you to mock celery task and run them when you want
long_description = file: README.rst
url = https://github.com/ulamlabs/celery-mock/
keywords = celery, mock, celery_mock
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[options]
packages = celery_mock
python_requires = >=3.5
install_requires =
    celery

include_package_data = True
zip_safe = False
package_dir =
    celery_mock=celery_mock

[flake8]
exclude = docs
